# thingly.net

./: .env  .flaskenv  .gitignore  LICENSE  Makefile  README.md  TODO.md  activate  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: main_thingly-app.yml  main_thingly.yml
infra/: .terraform.lock.hcl  main.tf
src/thingly/: __init__.py  api.py  app.py
src/thingly/api/: __init__.py  dice.py
src/thingly/models/: __init__.py  user.py
src/thingly/templates/: index.html  index.jinja
src/thingly/things/: dice.py
static/style/: style.css
templates/: index.html
test/: conftest.py  test_app.py  test_dice.py  test_models.py
tests/: conftest.py  test_app.py  test_dice.py  test_models.py
thingly/: dice.py
thingly/src/thingly/: api.py  app.py
thingly/src/thingly/models/: thing.py
thingly/tests/: conftest.py  test_app.py  test_dice.py
