[project]
name = "thingly.net"

[tool.coverage.run]
branch = true
source = ["src/thingly"]

[tool.coverage.report]
exclude_lines = ["if test_config:"]

[tool.djlint]
profile = "jinja"
extension = "jinja"

# TODO if flake8 ever supports pyproject.toml for config add this section
# [tool.flake8]
# see: .flake8 for flake8 configuration

# TODO remove when/if flask_restless ever provides type hints
# TODO alternative: generate stubs? (seems like a hassle...)
[[tool.mypy.overrides]]
module = [
    "flask_restless"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "src"
env = "FLASK_SQLALCHEMY_DATABASE_URI=sqlite:///:memory:"
